--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,11 @@ theme:
     text: Epilogue
 
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
 markdown_extensions:
   - pymdownx.critic
   - pymdownx.caret
@@ -30,10 +35,14 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+  # The BetterEm extension improves the detection of Markup to emphasize text in Markdown using special characters
+  - pymdownx.betterem
+  - pymdownx.arithmatex:
+      generic: true
 
 nav:
   - Home: 'index.md'
-  #- 'Machine Learning': 'machine-learning.md'
+  - 'Machine Learning': 'machine-learning.md'
   - 'Deep Learning': 
     - 'Feed Forward Neural Networks': 'feed-forward-nns.md'
     - 'Activation Functions': 'activation-functions.md'
