--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ nav:
   - 'Deep Learning': 
     - 'Feed Forward Neural Networks': 'feed-forward-nns.md'
     - 'Activation Functions': 'activation-functions.md'
-    - 'Setting up': 'setting-up.md'
+    - 'Setting up Neural Networks': 'setting-up.md'
     - 'Loss Functions' : 'loss-functions.md'
     - 'Optimizers': 'optimizers.md'
     - 'Regularization Techniques': 'regularization-techniques.md'
